--- a/index.html
+++ b/index.html
@@ -366,160 +366,114 @@
                         >
                             <!-- Additional required wrapper -->
                             <div class="swiper-wrapper">
-                                <!-- Slides -->
+                                <!-- Slide 1 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img
-                                            src="./assets/images/thumb-testimonio-1.png"
-                                            class="icon"
-                                            alt="..."
-                                        />
+                                        <img src="./assets/images/thumb-testimonio-1.png" class="icon" alt="..." />
                                         <div class="card-body">
-                                            <h5 class="card-title">
-                                                Restaurante
-                                            </h5>
+                                            <h5 class="card-title">La Casita del Sabor</h5>
                                             <p class="card-text">
-                                                Lorem ipsum dolor sit amet
-                                                consectetur adipisicing elit.
-                                                Sequi ut magnam perferendis
-                                                mollitia dolores odit distinctio
-                                                ea a corporis? Fuga accusantium
-                                                eius ad? Ipsa non doloremque
-                                                quas provident, eum error!
+                                                Agregar los Dino Nuggets al menú infantil fue un éxito rotundo. A los niños les encanta su forma divertida, y para nosotros, es un alivio saber que son 100% pechuga de pollo. ¡Nuestros clientes ahora vienen más seguido con sus pequeños!
                                             </p>
-                                            <p class="fw-bold">
-                                                ― Nombre del dueño
-                                            </p>
+                                            <p class="fw-bold">― Sofía R.</p>
                                         </div>
                                     </div>
                                 </div>
+
+                                <!-- Slide 2 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img
-                                            src="./assets/images/thumb-testimonio-1.png"
-                                            class="icon"
-                                            alt="..."
-                                        />
+                                        <img src="./assets/images/thumb-testimonio-1.png" class="icon" alt="..." />
                                         <div class="card-body">
-                                            <h5 class="card-title">
-                                                Restaurante
-                                            </h5>
+                                            <h5 class="card-title">Los Sabores de Casa</h5>
                                             <p class="card-text">
-                                                Lorem ipsum dolor sit amet
-                                                consectetur adipisicing elit.
-                                                Sequi ut magnam perferendis
-                                                mollitia dolores odit distinctio
-                                                ea a corporis? Fuga accusantium
-                                                eius ad? Ipsa non doloremque
-                                                quas provident, eum error!
+                                                Desde que incluimos los Dino Nuggets en nuestra carta, las familias se sienten más cómodas pidiendo el menú infantil. Son rápidos de preparar y siempre quedan crujientes, lo que nos permite mantener una excelente calidad y servicio.
                                             </p>
-                                            <p class="fw-bold">
-                                                ― Nombre del dueño
-                                            </p>
+                                            <p class="fw-bold">― Carlos M.</p>
                                         </div>
                                     </div>
                                 </div>
+
+                                <!-- Slide 3 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img
-                                            src="./assets/images/thumb-testimonio-1.png"
-                                            class="icon"
-                                            alt="..."
-                                        />
+                                        <img src="./assets/images/thumb-testimonio-1.png" class="icon" alt="..." />
                                         <div class="card-body">
-                                            <h5 class="card-title">
-                                                Restaurante
-                                            </h5>
+                                            <h5 class="card-title">Sazón Hogareño</h5>
                                             <p class="card-text">
-                                                Lorem ipsum dolor sit amet
-                                                consectetur adipisicing elit.
-                                                Sequi ut magnam perferendis
-                                                mollitia dolores odit distinctio
-                                                ea a corporis? Fuga accusantium
-                                                eius ad? Ipsa non doloremque
-                                                quas provident, eum error!
+                                                Los Dino Nuggets se han convertido en el platillo estrella para los niños. Su presentación es irresistible y la calidad nos asegura ofrecer algo delicioso y nutritivo. ¡Definitivamente han mejorado nuestro menú!
                                             </p>
-                                            <p class="fw-bold">
-                                                ― Nombre del dueño
-                                            </p>
+                                            <p class="fw-bold">― Valeria T.</p>
                                         </div>
                                     </div>
                                 </div>
+
+                                <!-- Slide 4 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img
-                                            src="./assets/images/thumb-testimonio-1.png"
-                                            class="icon"
-                                            alt="..."
-                                        />
+                                        <img src="./assets/images/thumb-testimonio-1.png" class="icon" alt="..." />
                                         <div class="card-body">
-                                            <h5 class="card-title">
-                                                Restaurante
-                                            </h5>
+                                            <h5 class="card-title">La Parrilla Familiar</h5>
                                             <p class="card-text">
-                                                Lorem ipsum dolor sit amet
-                                                consectetur adipisicing elit.
-                                                Sequi ut magnam perferendis
-                                                mollitia dolores odit distinctio
-                                                ea a corporis? Fuga accusantium
-                                                eius ad? Ipsa non doloremque
-                                                quas provident, eum error!
+                                                Antes batallábamos para encontrar opciones atractivas para los niños, pero desde que probamos los Dino Nuggets, se acabaron los problemas. Son fáciles de cocinar, y las mamás nos agradecen por ofrecer algo confiable y saludable.
                                             </p>
-                                            <p class="fw-bold">
-                                                ― Nombre del dueño
-                                            </p>
+                                            <p class="fw-bold">― Raúl G.</p>
                                         </div>
                                     </div>
                                 </div>
+
+                                <!-- Slide 5 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img
-                                            src="./assets/images/thumb-testimonio-1.png"
-                                            class="icon"
-                                            alt="..."
-                                        />
+                                        <img src="./assets/images/thumb-testimonio-1.png" class="icon" alt="..." />
                                         <div class="card-body">
-                                            <h5 class="card-title">
-                                                Restaurante
-                                            </h5>
+                                            <h5 class="card-title">Mamá</h5>
                                             <p class="card-text">
-                                                Lorem ipsum dolor sit amet
-                                                consectetur adipisicing elit.
-                                                Sequi ut magnam perferendis
-                                                mollitia dolores odit distinctio
-                                                ea a corporis? Fuga accusantium
-                                                eius ad? Ipsa non doloremque
-                                                quas provident, eum error!
+                                                Los Dino Nuggets han sido mi salvación para el lunch de mis hijos. Se preparan en minutos y siempre quedan deliciosos. Además, sé que estoy dándoles algo de calidad porque están hechos con pechuga de pollo.
                                             </p>
-                                            <p class="fw-bold">
-                                                ― Nombre del dueño
-                                            </p>
+                                            <p class="fw-bold">― Laura P.</p>
                                         </div>
                                     </div>
                                 </div>
+
+                                <!-- Slide 6 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img
-                                            src="./assets/images/thumb-testimonio-1.png"
-                                            class="icon"
-                                            alt="..."
-                                        />
+                                        <img src="./assets/images/thumb-testimonio-1.png" class="icon" alt="..." />
                                         <div class="card-body">
-                                            <h5 class="card-title">
-                                                Restaurante
-                                            </h5>
+                                            <h5 class="card-title">Abuela</h5>
                                             <p class="card-text">
-                                                Lorem ipsum dolor sit amet
-                                                consectetur adipisicing elit.
-                                                Sequi ut magnam perferendis
-                                                mollitia dolores odit distinctio
-                                                ea a corporis? Fuga accusantium
-                                                eius ad? Ipsa non doloremque
-                                                quas provident, eum error!
+                                                Mis nietos piden los Dino Nuggets cada vez que vienen. Les encanta la forma de dinosaurio, y yo estoy tranquila porque son sanos y rápidos de preparar. ¡Un must en mi congelador!
                                             </p>
-                                            <p class="fw-bold">
-                                                ― Nombre del dueño
+                                            <p class="fw-bold">― Martha G.</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Slide 7 -->
+                                <div class="swiper-slide">
+                                    <div class="card">
+                                        <img src="./assets/images/thumb-testimonio-1.png" class="icon" alt="..." />
+                                        <div class="card-body">
+                                            <h5 class="card-title">Mamá Emprendedora</h5>
+                                            <p class="card-text">
+                                                Con el poco tiempo que tengo, los Dino Nuggets son ideales para las cenas rápidas o el lunch. Siempre quedan doraditos y a mis hijos les fascinan. ¡Son prácticos y rinden muchísimo!
                                             </p>
+                                            <p class="fw-bold">― Ana R.</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Slide 8 -->
+                                <div class="swiper-slide">
+                                    <div class="card">
+                                        <img src="./assets/images/thumb-testimonio-1.png" class="icon" alt="..." />
+                                        <div class="card-body">
+                                            <h5 class="card-title">Ama de Casa</h5>
+                                            <p class="card-text">
+                                                Cuando descubrí los Dino Nuggets, se acabaron las discusiones a la hora de comer. A mis hijos les encantan, y yo sé que estoy dándoles un alimento nutritivo. ¡Son un básico en nuestra cocina!
+                                            </p>
+                                            <p class="fw-bold">― Carolina V.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -596,7 +550,7 @@
                                     pattern=".{5,50}"
                                     required
                                 />
-                                <label for="nombre" class="form-label"
+                                <label for="apellido" class="form-label"
                                     >Apellido*</label
                                 >
                                 <div class="valid-feedback">¡Luce bien!</div>
@@ -653,7 +607,7 @@
                                     oninput="if(this.value.length > 6) this.value=this.value.slice(0,6)"
                                     required
                                 />
-                                <label for="nombre" class="form-label"
+                                <label for="cp" class="form-label"
                                     >Código postal*</label
                                 >
                                 <div class="valid-feedback">¡Luce bien!</div>
