Quitar atributo disabled

--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                                     name="estado"
                                     required
                                 >
-                                    <option value="" disabled>
+                                    <option value="">
                                         Seleccione uno...
                                     </option>
                                     <option value="Aguascalientes">
@@ -710,7 +710,7 @@
                                     name="pais"
                                     required
                                 >
-                                    <option value="" disabled>
+                                    <option value="">
                                         Seleccione uno...
                                     </option>
                                     <option value="Afganistán">
