Agregar Google Analytics

--- a/index.html
+++ b/index.html
@@ -1244,5 +1244,15 @@
     </a -->
 
         <script src="./assets/js/app.bundle.js"></script>
+
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-0HXFZR3VJ3"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-0HXFZR3VJ3');
+        </script>
     </body>
 </html>
