Completar formulario de contacto

--- a/index.html
+++ b/index.html
@@ -1165,6 +1165,76 @@
                                     </div>
                                 </div>
                             </div>
+                            <div id="campos-negocio" style="display: none;">
+                                <div class="row">
+                                    <div class="col-md-6 form-floating">
+                                        <input
+                                            type="text"
+                                            class="form-control shadow-none"
+                                            id="nombre-negocio"
+                                            name="nombre-negocio"
+                                            placeholder="Nombre de tu negocio*"
+                                            pattern=".{3,100}"
+                                        />
+                                        <label for="nombre-negocio" class="form-label">Nombre de tu negocio*</label>
+                                        <div class="valid-feedback">¡Luce bien!</div>
+                                        <div class="invalid-feedback">
+                                            Por favor introduce el nombre de tu negocio.
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6 form-floating">
+                                        <select
+                                            class="form-control"
+                                            id="giro-negocio"
+                                            name="giro-negocio"
+                                        >
+                                            <option value="">Seleccione uno...</option>
+                                            <option value="Banquetes">Banquetes</option>
+                                            <option value="Barcos">Barcos</option>
+                                            <option value="Bares y cantinas">Bares y cantinas</option>
+                                            <option value="Birrieria o Barbacoa">Birrieria o Barbacoa</option>
+                                            <option value="Burreros">Burreros</option>
+                                            <option value="Cafeterias">Cafeterías</option>
+                                            <option value="Carniceria">Carnicería</option>
+                                            <option value="Carnitas">Carnitas</option>
+                                            <option value="Comedores Industriales">Comedores Industriales</option>
+                                            <option value="Cooperativas">Cooperativas</option>
+                                            <option value="Dependencia de Gobierno">Dependencia de Gobierno</option>
+                                            <option value="Distribuidor">Distribuidor</option>
+                                            <option value="Eloteros">Eloteros</option>
+                                            <option value="Expendio de Pescados y Mariscos">Expendio de Pescados y Mariscos</option>
+                                            <option value="Ferias">Ferias</option>
+                                            <option value="Fondas o Cocinas">Fondas o Cocinas</option>
+                                            <option value="Gorditas">Gorditas</option>
+                                            <option value="Guarderias">Guarderías</option>
+                                            <option value="Hamburguesas">Hamburguesas</option>
+                                            <option value="Hospitales">Hospitales</option>
+                                            <option value="Hot dogs">Hot dogs</option>
+                                            <option value="Hoteles">Hoteles</option>
+                                            <option value="Menuderia">Menudería</option>
+                                            <option value="Minisuper">Minisuper</option>
+                                            <option value="Pizzas">Pizzas</option>
+                                            <option value="Pollerias">Pollerías</option>
+                                            <option value="Restaurante">Restaurante</option>
+                                            <option value="Restaurante de Mariscos">Restaurante de Mariscos</option>
+                                            <option value="Snack">Snack</option>
+                                            <option value="Sushi">Sushi</option>
+                                            <option value="Tamales">Tamales</option>
+                                            <option value="Taqueria">Taquería</option>
+                                            <option value="Tendero o Cremerias">Tendero o Cremerías</option>
+                                            <option value="Tianguis">Tianguis</option>
+                                            <option value="Tortas">Tortas</option>
+                                        </select>
+                                        <label for="giro-negocio" class="form-label">Giro de tu negocio*</label>
+                                        <div class="valid-feedback">¡Luce bien!</div>
+                                        <div class="invalid-feedback">
+                                            Por favor selecciona el giro de tu negocio.
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
                             <div class="col-md-12 form-check">
                                 <input
                                     type="checkbox"
