Ocultar redes sociales

--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col text-center">
-                        <ul class="list-inline mb-0">
+                        <!-- ul class="list-inline mb-0">
                             <li class="list-inline-item">
                                 <a href="#" target="_blank">
                                     <i class="fa-brands fa-instagram"></i>
@@ -1303,7 +1303,7 @@
                                     <i class="fa-brands fa-facebook"></i>
                                 </a>
                             </li>
-                        </ul>
+                        </ul -->
                     </div>
                 </div>
             </div>
