Agregar derechos de autor

--- a/index.html
+++ b/index.html
@@ -1292,6 +1292,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col text-center">
+                        <p class="mb-0">
+                            &copy; 2024 CarneMart - Dinonuggets. Todos los derechos reservados. | Made with <i class="fa-solid fa-heart"></i> by <a href="https://mixen.mx/" target="_blank">Mixen</a>.
+                        </p>
                         <!-- ul class="list-inline mb-0">
                             <li class="list-inline-item">
                                 <a href="#" target="_blank">
