Hacer responsivos thumbs de testimonios

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                                 <!-- Slide 1 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img src="./assets/images/testimonios/1.webp" class="icon" alt="..." />
+                                        <img src="./assets/images/testimonios/1.webp" class="icon img-fluid" alt="..." />
                                         <div class="card-body">
                                             <h5 class="card-title">La Casita del Sabor</h5>
                                             <p class="card-text">
@@ -383,7 +383,7 @@
                                 <!-- Slide 2 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img src="./assets/images/testimonios/2.webp" class="icon" alt="..." />
+                                        <img src="./assets/images/testimonios/2.webp" class="icon img-fluid" alt="..." />
                                         <div class="card-body">
                                             <h5 class="card-title">Los Sabores de Casa</h5>
                                             <p class="card-text">
@@ -397,7 +397,7 @@
                                 <!-- Slide 3 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img src="./assets/images/testimonios/3.webp" class="icon" alt="..." />
+                                        <img src="./assets/images/testimonios/3.webp" class="icon img-fluid" alt="..." />
                                         <div class="card-body">
                                             <h5 class="card-title">Sazón Hogareño</h5>
                                             <p class="card-text">
@@ -411,7 +411,7 @@
                                 <!-- Slide 4 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img src="./assets/images/testimonios/4.webp" class="icon" alt="..." />
+                                        <img src="./assets/images/testimonios/4.webp" class="icon img-fluid" alt="..." />
                                         <div class="card-body">
                                             <h5 class="card-title">La Parrilla Familiar</h5>
                                             <p class="card-text">
@@ -425,7 +425,7 @@
                                 <!-- Slide 5 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img src="./assets/images/testimonios/5.webp" class="icon" alt="..." />
+                                        <img src="./assets/images/testimonios/5.webp" class="icon img-fluid" alt="..." />
                                         <div class="card-body">
                                             <h5 class="card-title">Mamá</h5>
                                             <p class="card-text">
@@ -439,7 +439,7 @@
                                 <!-- Slide 6 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img src="./assets/images/testimonios/6.webp" class="icon" alt="..." />
+                                        <img src="./assets/images/testimonios/6.webp" class="icon img-fluid" alt="..." />
                                         <div class="card-body">
                                             <h5 class="card-title">Abuela</h5>
                                             <p class="card-text">
@@ -453,7 +453,7 @@
                                 <!-- Slide 7 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img src="./assets/images/testimonios/7.webp" class="icon" alt="..." />
+                                        <img src="./assets/images/testimonios/7.webp" class="icon img-fluid" alt="..." />
                                         <div class="card-body">
                                             <h5 class="card-title">Mamá Emprendedora</h5>
                                             <p class="card-text">
@@ -467,7 +467,7 @@
                                 <!-- Slide 8 -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img src="./assets/images/testimonios/8.webp" class="icon" alt="..." />
+                                        <img src="./assets/images/testimonios/8.webp" class="icon img-fluid" alt="..." />
                                         <div class="card-body">
                                             <h5 class="card-title">Ama de Casa</h5>
                                             <p class="card-text">
