--- a/index.html
+++ b/index.html
@@ -283,12 +283,10 @@
                             <div class="card-body">
                                 <div>
                                     <h5 class="card-title">
-                                        Beneficio económico
+                                        Aumenta tus ingresos
                                     </h5>
                                     <p class="card-text">
-                                        Explicación* sobre el margen de ganancia
-                                        superior al 300%, ideal para aumentar
-                                        los ingresos de los negocios.
+                                        Los Dinonuggets ofrecen un margen de ganancia superior al 300%, permitiéndote maximizar el retorno de tu inversión con cada platillo vendido.
                                     </p>
                                 </div>
                             </div>
@@ -304,13 +302,10 @@
                             <div class="card-body">
                                 <div>
                                     <h5 class="card-title">
-                                        Atractivo para el menú infantil
+                                        Producto atractivo para niños
                                     </h5>
                                     <p class="card-text">
-                                        Que se exponga cómo los Dinonuggets se
-                                        vuelven un plato preferido por los niños
-                                        y que, al mismo tiempo, brindan
-                                        seguridad y calidad para los padres.
+                                        Su forma divertida de dinosaurio los convierte en una opción irresistible para los pequeños, ayudando a atraer familias y aumentando la satisfacción de tus clientes.
                                     </p>
                                 </div>
                             </div>
@@ -326,12 +321,68 @@
                             <div class="card-body">
                                 <div>
                                     <h5 class="card-title">
-                                        Calidad del producto
+                                        Calidad garantizada
                                     </h5>
                                     <p class="card-text">
-                                        Hechos 100% de pechuga de pollo, sin
-                                        ingredientes artificiales o añadidos que
-                                        disminuyan su valor nutricional.
+                                        Hechos con 100% pechuga de pollo, ofrecen un sabor delicioso y saludable que genera confianza en tus comensales.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <div
+                            class="card text-bg-light mb-4"
+                            data-aos="fade-up"
+                            data-aos-duration="1000"
+                            data-aos-delay="400"
+                        >
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title">
+                                        Versatilidad en el menú
+                                    </h5>
+                                    <p class="card-text">
+                                        Puedes ofrecerlos como un platillo principal, acompañados de papas y ensalada, o como una opción para eventos infantiles y combos familiares.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div
+                            class="card text-bg-light mb-4"
+                            data-aos="fade-up"
+                            data-aos-duration="1000"
+                            data-aos-delay="500"
+                        >
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title">
+                                        Rápida preparación
+                                    </h5>
+                                    <p class="card-text">
+                                        Listos en tan solo 5 minutos en freidora o sartén, lo que optimiza el tiempo en cocina y mejora el flujo de tu operación.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div
+                            class="card text-bg-light mb-4"
+                            data-aos="fade-up"
+                            data-aos-duration="1000"
+                            data-aos-delay="600"
+                        >
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title">
+                                        Ideal para negocios competitivos
+                                    </h5>
+                                    <p class="card-text">
+                                        Diferénciate de la competencia al integrar un producto novedoso y con alto valor percibido, perfecto para menús infantiles.
                                     </p>
                                 </div>
                             </div>
